--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"engines": {
-		"node": "20.x"
+		"node": ">=18.0.0"
 	},
 	"scripts": {
 		"dev": "vite dev",
@@ -20,7 +20,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@types/bcrypt": "^6.0.0",
+		"@types/bcryptjs": "^2.4.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -29,12 +29,14 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.5.1",
 		"@types/pg": "^8.16.0",
-		"bcrypt": "^6.0.0",
-		"canvas": "^3.2.1",
+		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.2.3",
 		"drizzle-kit": "^0.31.8",
 		"drizzle-orm": "^0.45.1",
 		"pdfjs-dist": "^3.11.174",
 		"pg": "^8.17.1"
+	},
+	"optionalDependencies": {
+		"canvas": "^3.2.1"
 	}
 }
