--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "build": {
-    "env": {
-      "NODE_VERSION": "20"
-    }
-  }
+  "framework": "sveltekit"
 }
