--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"engines": {
-		"node": "20.x"
+		"node": ">=18.0.0"
 	},
 	"scripts": {
 		"dev": "vite dev",
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.5.1",
 		"@types/pg": "^8.16.0",
+		"@vercel/blob": "^2.0.1",
 		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.2.3",
 		"drizzle-kit": "^0.31.8",
