--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.5.1",
+		"@sveltejs/adapter-vercel": "^6.3.1",
 		"@types/pg": "^8.16.0",
 		"@vercel/blob": "^2.0.1",
 		"bcryptjs": "^3.0.3",
